# advent-of-spin-2024

./: spin.toml
.wit/components/api-naughtyornice/: deps.wit
api-giftsuggestions/: Cargo.toml
api-giftsuggestions/src/: lib.rs
api-naughtyornice/: Cargo.toml
api-naughtyornice/src/: lib.rs
api-naughtyornice/src/bindings/: deps.rs
api-wishlists/: Cargo.toml
api-wishlists/src/: lib.rs
app/: index.html  main-5AEFYDJV.js  main-G2V762QT.js  main-L3QSSQNI.js
frontend/: package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.config.ts  app.routes.ts  gift-suggestions.service.spec.ts  gift-suggestions.service.ts  naughty-or-nice.service.spec.ts  naughty-or-nice.service.ts  naughtyornicescore.ts  suggestion.ts  wishlist.service.ts  wishlist.ts
frontend/src/app/add-wishlist/: add-wishlist.component.html  add-wishlist.component.spec.ts  add-wishlist.component.ts
frontend/src/app/all-wishlists/: all-wishlists.component.html  all-wishlists.component.spec.ts  all-wishlists.component.ts
frontend/src/app/gift-suggestions/: gift-suggestions.component.html  gift-suggestions.component.spec.ts  gift-suggestions.component.ts
frontend/src/app/home/: home.component.css  home.component.html
frontend/src/app/naughty-or-nice/: naughty-or-nice.component.html  naughty-or-nice.component.spec.ts  naughty-or-nice.component.ts
wasm-components/gift-suggestion-component/: app.py
wasm-components/naughty-or-nice/: lib.js  package.json
wasm-components/naughty-or-nice/wit/: world.wit
