[package]
name = "api-giftsuggestions"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
spin-sdk = "3.1.0"
wit-bindgen = "0.36.0"

[workspace]
