[package]
name = "api-wishlists"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"
urlencoding = "2.1.3"

[workspace]
